<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life-online</string>
    <string name="action_settings">Impostazioni</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="size_pager_text">42</string>
    <!-- toast -->
    <string name="toast_connection_unavailable">Connessione assente</string>
    <string name="toast_login_failed_invalid_usrpsw">Dati non validi</string>
    <string name="toast_login_failed_user">Inserisci l\'username</string>
    <string name="toast_login_failed_psw">Inserisci la password</string>
    <string name="toast_login_success">Login completato</string>
    <string name="toast_username_vuoto">Inserisci un username</string>
    <string name="toast_password_vuoto">Inserisci una password</string>
    <string name="toast_nome_vuoto">Inserisci un nome</string>
    <string name="toast_codf_vuoto">Inserisci un codice fiscale</string>
    <string name="toast_congnome_vuoto">Inserisci un cognome</string>
    <string name="toast_datan_vuoto">Inserisci una data di nascita</string>
    <string name="toast_reg_problema">Problema registrazione</string>
    <string name="toast_soccorso_non_personale">Inserisci i dati della segnalazione</string>
    <string name="toast_gps_unavailable">Attendi il fix del GPS</string>
    <string name="toast_distress_segnalazione">Segnalazione inviata</string>
    <string name="toast_main_seleziona">selezionato, ora scegli la segnalazione</string>
    <string name="toast_soccorso_seleziona_ente">Seleziona prima un ente dalla lista</string>
    <string name="toast_gps_disabled">Attiva il GPS</string>
    <string name="popup_imposta_data">Imposta Data</string>
    <string name="popup_titolo_gps">Impostazioni GPS</string>
    <string name="popup_messaggio_gps">Il GPS non è abilitato. Per l\'invio della segnalazione è obbligatorio poter rilevare la tua posizione. Abilita il GPS dalle impostazioni</string>
    <string name="popup_bottone_no_gps">Annulla</string>
    <string name="popup_bottone_si_gps">Vai alle impostazioni</string>
    <string name="popup_bottone_si_personale">Invia</string>
    <string name="popup_titolo_personale">Conferma invio</string>
    <string name="popup_messaggio_personale">Stai per inviare una segnalazione personale. Verranno inviate al nostro server le tue coordinate GPS per poterti rintracciare e offrirti assistenza il prima possibile.</string>
    <!-- text view -->
    <string name="text_tipi_di_soccorso">Tipo di soccorso</string>
    <string name="text_soccorso">Soccorso</string>
    <string name="text_soccorso_non_personale">Non Personale</string>
    <string name="text_numero_feriti">Numero Feriti</string>
    <string name="text_causa">Causa</string>
    <string name="text_sintomi">Sintomi</string>
    <string name="text_informazioni_personali">Informazioni Personali</string>
    <string name="text_codice_fiscale">Codice fiscale</string>
    <string name="text_nome">Nome</string>
    <string name="text_cognome">Cognome</string>
    <string name="text_info_aggiuntive">Informazioni sanitarie aggiuntive</string>
    <string name="text_data_nascita">Data di nascita</string>
    <!-- nome activity -->
    <string name="title_activity_activity_my_position_">Mia Posizione</string>
    <string name="title_activity_activity_service_info">Adesione al servizio</string>
    <string name="title_activity_activity_distress_not_personal">Soccorso non personale</string>
    <string name="title_activity_soccorso">Soccorso</string>
    <!-- Bottoni -->
    <string name="buttonOk">OK</string>
    <string name="buttonHelp">Soccorso Personale</string>
    <string name="button_invia">Invia</string>
    <string name="buttonHelp2">Soccorso di Terzi</string>
    <string name="button_call">Chiamata</string>
    <string name="button_login">Login</string>
    <!-- suggerimenti -->
    <string name="hint_for_medical_information">Gruppo sanguigno, allergia note, patologie note, etc.. </string>
    <string name="hint_for_birth">gg/mm/aaaa</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_sintomi_agg">Inserisci i sintomi riscontrati</string>
    <string name="text_sintomi_agg">Altri sintomi</string>
    <!-- progress dialog -->
    <string name="progress_dialog_invio_segnalazione">Invio della Segnalazione..</string>
    <string name="progress_dialog_login">Login in corso..</string>
    <string name="progress_dialog_reg">Registrazione in corso..</string>
    <!-- shared preferences -->
    <string name="PREFERENCES_ID">id</string>
    <string name="PREFERENCES_USR">user</string>
    <string name="PREFERENCES_PSW">pass</string>
    <string name="PREFERENCES_NOME">nome</string>
    <string name="PREFERENCES_DATAN">datanasc</string>
    <string name="PREFERENCES_COD_FIS">cod_fis</string>
    <string name="PREFERENCES_COGNOME">cognome</string>
    <string name="PREFERENCES_SEGNI_PART">segni_part</string>
    <!-- array -->
    <string-array name="num_persone">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>5+</item>
    </string-array>
    <string-array name="cause">
        <item>Incidente autostradale</item>
        <item>Aggressione</item>
        <item>Malessere improvviso</item>
        <item>Altro</item>
    </string-array>
    <string-array name="sintomi">
        <item>Nessuno</item>
        <item>Difficoltà respiratorie</item>
        <item>Battito debole</item>
        <item>Dolori da trauma</item>
        <item>Altro</item>
    </string-array>
    <string-array name="array_enti">
        <item>Polizia di Stato</item>
        <item>Vigili del fuoco</item>
        <item>Carabinieri</item>
        <item>Emergenza sanitaria</item>
        <item>Capitaneria di porto</item>
        <item>Corpo forestale</item>
        <item>Telefono Azzurro</item>
    </string-array>

    <string name="title_activity_registration">RegistrationActivity</string>

</resources>