<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context=".ActivityDistressNotPersonal" >

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textView1"
        android:background="#000000" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view1"
        android:layout_alignParentTop="true"
        android:text="@string/text_soccorso_non_personale"
        android:textSize="13pt"
        android:textStyle="italic|bold" />

    <ScrollView
        android:id="@+id/scrolla"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/text_numero_feriti"
                android:textSize="8pt"
                android:textStyle="italic|bold" />

            <Spinner
                android:id="@+id/spinner_numero_feriti"
                android:layout_width="@dimen/size_spinner"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_causa"
                android:textSize="8pt"
                android:textStyle="italic|bold" />

            <Spinner
                android:id="@+id/spinner_causa_malessere"
                android:layout_width="@dimen/size_spinner"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_sintomi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sintomi"
                android:textSize="8pt"
                android:textStyle="italic|bold"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/spinner_sintomi"
                android:layout_width="@dimen/size_spinner"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
            
            <TextView
                android:id="@+id/text_sintomi_agg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sintomi_agg"
                android:textSize="8pt"
                android:textStyle="italic|bold"
                android:visibility="invisible" />
            
               <EditText
                android:id="@+id/edit_sintomi_agg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="invisible"
                android:hint="@string/hint_sintomi_agg"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button_invia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/background_button"
                android:text="@string/button_invia" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>